Add message to indicator reporting page, when no project is collecting it. Add partial migration script from former database
Fix project link in breadcrumbs is no longer clickage (it lead to a page which is only accessible to owners)
Fix project link in list should only lead to basics if user is allowed to access that page.
Fix project link in main menu (for parters) always go to reporting
Fix acl directive assumed that logged on user is present in the list of users of current project.
Fix olap grid: when data was missing from cubes the cube the missing fields were not grayed
Fix design doc name mismatched with model (reporting.cross_cutting)
Fix regression when generating stripped down projects for indicator reporting (indicator.parameters => indicator.computation.parameters)

Remove dead code from ProjectModel, OlapCube

--- a/client/dev/partials/indicators/reporting.html
+++ b/client/dev/partials/indicators/reporting.html
@@ -91,10 +91,17 @@
 			<th ng-repeat="col in cols">{{col.name}}</th>
 		</tr>
 	</thead>
-	<tbody ng-repeat="(blockIndex, block) in blocks">
+	
+	<tbody ng-if="blocks.length === 0">
 		<tr>
+			<td colspan="{{3 + cols.length}}" translate="indicator.not_collected"></th>
+		</tr>
+	</tbody>
+
+	<tbody ng-repeat="(blockIndex, block) in blocks">
+		<tr ng-click="open[blockIndex] = !open[blockIndex]">
 			<td ng-class="{noprint: open[blockIndex]}" style="text-align: center" rowspan="{{open[blockIndex] ? block.rows.length + 1 : 1}}">
-				<button class="btn btn-xs btn-default" ng-click="open[blockIndex] = !open[blockIndex]">
+				<button class="btn btn-xs btn-default">
 					<i class="fa fa-angle-double-up" ng-if="open[blockIndex]"></i>
 					<i class="fa fa-angle-double-down" ng-if="!open[blockIndex]"></i>
 				</button>
@@ -130,26 +137,6 @@
 			<td ng-repeat="col in row.cols track by $index" reporting-field></td>
 			<td ng-if="row.type === 'data' && !row.cols" colspan="{{cols.length}}" style="background-color: rgb(238, 238, 238);">{{row.message|translate}}</td>
 		</tr>
-
 	</tbody>
-
-	
-<!-- 	<tbody>
-		<tr ng-repeat="row in rows track by $index">
-			<td class="noprint" style="text-align: center">
-				<input id="{{row.id}}" type="checkbox" ng-model="plots[row.id]" ng-if="row.cols" />
-			</td>
-			<td class="indent{{row.indent}}">
-				<label for="{{row.id}}">{{row.project}}</label><br/>
-				<small>{{row.name}}</small>
-			</td>
-			<td>{{row.baseline}}</td>
-			<td>{{row.target}}</td>
-			<td ng-repeat="col in row.cols track by $index" indicator-reporting-field></td>
-			<td ng-if="!row.cols" colspan="{{cols.length}}" style="background-color: rgb(238, 238, 238);"></td>
-
-
-		</tr>
-	</tbody> -->
 </table>
 
