--- a/client/dev/partials/menu.html
+++ b/client/dev/partials/menu.html
@@ -30,7 +30,7 @@
 				</li>
 
 				<li ng-class="{active: $state.includes('main.project')}" ng-if="userCtx.type == 'partner'">
-					<a ui-sref="main.project.structure.basics">
+					<a ui-sref="main.project.reporting.general">
 						<i class="fa fa-fw fa-object-group"></i>
 						<span translate="shared.project"></span>
 					</a>
