Add: Create page with extra indicators (logframe / crosscutting / extra)
Change: Indicators and themes loading now happen on the main.project state to avoid reloading many times.
Change: Retrieving a form from the project is done on controller instead of main app to reduce clutter.
Change: Project menu is no longer foldable.
Change: Data source variables can now be folded.
Change: Add message on project's crosscutting indicator page when no indicator is needed.

Fix: Update migration script
Fix: Update homepage, as features of monitool have changed.
Fix: Remove hard coded strings in english and french in templates, controllers and pdf directive.
Fix: Massive translation update to match all changes made on templates.
Fix: Teporting table show all cross cutting indicators, collected or not.
Fix: change InputSlot formatting and method name.
Fix: For consistency, use same icon for accordeon in reporting than the rest of the app

--- a/client/dev/partials/home.html
+++ b/client/dev/partials/home.html
@@ -16,14 +16,14 @@
 						<ul style="margin-bottom: 10px">
 							<li>Reduce the learning curve required to consult data</li>
 							<li>Have consistency checks on data to limit entry errors</li>
-							<li>Limit mistakes in calculation: indicators formulas are bundled with the catalog</li>
+							<li>Limit mistakes in calculation</li>
 						</ul>
 					</li>
 					<li>
 						<strong>Stepping back</strong><br/>
 
 						<ul style="margin-bottom: 10px">
-							<li>Through the catalog, encourage geographically remote projects to use the same indicators when measuring comparable events.</li>
+							<li>Encourage geographically remote projects to use the same indicators when measuring comparable events.</li>
 							<li>Have mechanisms to compare the value of an indicator on a project, with the same value for all other that collected it.</li>
 						</ul>
 					</li>
@@ -52,7 +52,7 @@
 					</li>
 					<li>
 						<strong>Follow-up</strong><br/>
-						Reporting graphs and tables of your choice are available and built with the most current available data
+						Reporting graphs and tables of your choice are available and built with the most up-to-date data
 					</li>
 					<li>
 						<strong>Post-closing</strong><br/>
@@ -61,17 +61,13 @@
 				</ul>
 			</div>
 			<div class="col-xs-4">
-				<h4>First</h4>
+				<h4>Before starting</h4>
 
 				<ul style= "margin-bottom: 10px">
-					<li>
-						Read the 
-						<a ui-sref="main.help.create" ng-if="userCtx.type == 'user'">user guide</a>
-						<a ui-sref="main.help.structure" ng-if="userCtx.type != 'user'">user guide</a>
-					</li>
-					<li>Decide what data you want to track on your project in "Collection forms"</li>
-					<li>Enter your logical frame and link your indicators to the forms</li>
-					<li>Make your first data entry and have a look at the generated reporting!</li>
+					<li>Make a list of all reports that you will need to create on the project's life</li>
+					<li>List all indicators that are contained in those reports, and other indicators you need for monitoring</li>
+					<li>List all data that you will need to extract to compute those</li>
+					<li>Indentify which data source will provide with this data</li>
 				</ul>
 			</div>
 		</div>
@@ -93,13 +89,13 @@
 						<ul style="margin-bottom: 10px">
 							<li>Réduire la courbe d’apprentissage nécessaire à l'exploitation des données.</li>
 							<li>Disposer de contrôles de cohérence afin de limiter les erreurs de saisie</li>
-							<li>Limiter les fautes de calcul: les formules des indicateurs sont pré-saisies</li>
+							<li>Limiter les fautes de calcul</li>
 						</ul>
 					</li>
 					<li>
 						<strong>Prendre du recul</strong><br/>
 						<ul style="margin-bottom: 10px">
-							<li>À travers le catalogue, encourager des projets géographiquement éloignés à utiliser les mêmes indicateurs lorsqu’ils mesurent des grandeurs comparables.</li>
+							<li>Encourager des projets géographiquement éloignés à utiliser les mêmes indicateurs lorsqu’ils mesurent des grandeurs comparables.</li>
 							<li>Disposer de mécanismes pour comparer la valeur d’un indicateur sur un projet, avec la même grandeur chez tous les autres qui le collectent.</li>
 						</ul>
 					</li>
@@ -144,17 +140,13 @@
 				</ul>
 			</div>
 			<div class="col-xs-4">
-				<h4>Pour commencer</h4>
+				<h4>Avant de commencer</h4>
 				
 				<ul style="margin-bottom: 10px">
-					<li>
-						Lisez le 
-						<a ui-sref="main.help.create" ng-if="userCtx.type == 'user'">guide d'utilisation de l'outil</a>
-						<a ui-sref="main.help.structure" ng-if="userCtx.type != 'user'">guide d'utilisation de l'outil</a>
-					</li>
-					<li>Décidez des données que vous désirez suivre sur votre projet dans "Formulaires de collecte".</li>
-					<li>Saisissez votre cadre logique et liez vos indicateurs au données collectées précedement</li>
-					<li>Réalisez votre première saisie!</li>
+					<li>Faites une liste de tous les rapports que vous devrez créer pendant la vie du projet</li>
+					<li>Listez tous les indicateurs qui sont contenus dans ces rapports</li>
+					<li>Listez toutes les données à collecter sur le project pour les calculer</li>
+					<li>Identifiez des sources de données pour chacune de ces données</li>
 				</ul>
 			</div>
 		</div>
@@ -175,14 +167,14 @@
 						<ul style="margin-bottom: 10px">
 							<li>Reducir la curva de aprendizaje necesaria para el analisis de datos</li>
 							<li>Hacer pruebas de coherencia para limitar los errores de entrada</li>
-							<li>Limitar los errores de formulas en indicadores: estan entradas previamente en la herramienta</li>
+							<li>Limitar los errores de formulas en indicadores</li>
 						</ul>
 					</li>
 					<li>
 						<strong>Tomar distancia con los datos</strong><br/>
 
 						<ul style="margin-bottom: 10px">
-							<li>A través del catálogo, fomentar proyectos geográficamente remotos a utilizar los mismos indicadores cuando miden magnitudes comparables.</li>
+							<li>Fomentar proyectos geográficamente remotos a utilizar los mismos indicadores cuando miden magnitudes comparables.</li>
 							<li>Contar con mecanismos para comparar el valor de un indicador en un proyecto, con el mismo valor para todos los demás.</li>
 						</ul>
 					</li>
@@ -225,14 +217,10 @@
 			<div class="col-xs-4">
 				<h4>Para empezar</h4>
 				<ul style="margin-bottom: 10px">
-					<li>
-						Lea la
-						<a ui-sref="main.help.create" ng-if="userCtx.type == 'user'">Guía del usuario</a>
-						<a ui-sref="main.help.structure" ng-if="userCtx.type != 'user'">Guía del usuario</a>
-					</li>
-					<li>Decida qué datos desea seguir en "Formularios de colecta"</li>
-					<li>Entre su marco lógico y vincule sus indicadores a los datos recogidos previamente</li>
-					<li>Haga su primera entrada!</li>
+					<li>Cree una lista de todos los informes que se deberan crear durante la vida del proyecto</li>
+					<li>Cree la lista de los indicadores que estos informes contienen</li>
+					<li>Cree la lista de los datos que deberan ser colectados en el proyecto para calcularlos</li>
+					<li>Identifique fuentes de datos para cada dato</li>
 				</ul>
 			</div>
 		</div>
