--- a/client/dev/partials/indicators/reporting.html
+++ b/client/dev/partials/indicators/reporting.html
@@ -86,7 +86,6 @@
 	<thead>
 		<tr>
 			<th style="width: 30px" class="noprint"></th>
-			<th style="width: 30px" class="noprint"></th>
 			<th translate="shared.name"></th>
 			<th ng-repeat="col in cols">{{col.name}}</th>
 		</tr>
@@ -94,19 +93,16 @@
 	
 	<tbody ng-if="blocks.length === 0">
 		<tr>
-			<td colspan="{{3 + cols.length}}" translate="indicator.not_collected"></th>
+			<td colspan="{{2 + cols.length}}" translate="indicator.not_collected"></th>
 		</tr>
 	</tbody>
 
 	<tbody ng-repeat="(blockIndex, block) in blocks">
-		<tr ng-click="open[blockIndex] = !open[blockIndex]">
-			<td ng-class="{noprint: open[blockIndex]}" style="text-align: center" rowspan="{{open[blockIndex] ? block.rows.length + 1 : 1}}">
-				<button class="btn btn-xs btn-default">
-					<i class="fa fa-angle-double-up" ng-if="open[blockIndex]"></i>
-					<i class="fa fa-angle-double-down" ng-if="!open[blockIndex]"></i>
-				</button>
-			</td>
-			<th class="indent0" colspan="{{2 + cols.length}}">{{block.text}}</th>
+		<tr ng-click="open[blockIndex] = !open[blockIndex]" style="cursor: pointer">
+ 			<th class="indent0" colspan="{{2 + cols.length}}">
+				<i class="noprint" fa-open="open[blockIndex]"></i>
+				{{block.text}}
+			</th>
 		</tr>
 		
 		<tr ng-repeat="row in block.rows">
