--- a/client/dev/partials/projects/structure/cross-cutting.html
+++ b/client/dev/partials/projects/structure/cross-cutting.html
@@ -10,35 +10,36 @@
 	<legend ng-if="theme.definition">{{theme.definition.name[language]}}</legend>
 	<legend ng-if="!theme.definition" translate="project.multi_theme_indicator"></legend>
 
-	<div>
-		<div class="panel panel-default indicator-panel"
-			 ng-repeat="indicator in theme.indicators|orderBy:getName">
+	<!-- markup is broken on purpose: do not fix -->
+	<!-- If we put spaces between tags, margins break -->
 
-			<div class="panel-heading">
-				{{indicator.name[language]}}
-			</div>
-			
-			<div class="panel-body" style="padding-bottom: 10px">
-				<strong>{{'project.baseline'|translate}}:</strong> {{editableProject.crossCutting[indicator._id].baseline != null ? editableProject.crossCutting[indicator._id].baseline : '?'}}<br/>
-				<strong>{{'project.target'|translate}}:</strong> {{editableProject.crossCutting[indicator._id].target != null ? editableProject.crossCutting[indicator._id].target : '?'}}<br/>
+	<div><div translate="project.no_cross_cutting" ng-if="theme.indicators.length == 0"></div><div class="panel panel-default indicator-panel"
+		 ng-repeat="indicator in theme.indicators|orderBy:getName">
 
-				<strong>{{'project.computation'|translate}}:</strong>
-				<span class="text-danger" ng-if="!editableProject.crossCutting[indicator._id].computation">
-					{{'project.indicator_is_not_computed'|translate}}
-					<i class="fa fa-unlink" ></i>
-				</span>
-				<span class="text-success" ng-if="editableProject.crossCutting[indicator._id].computation">
-					{{'project.indicator_is_computed'|translate}}
-					<i class="fa fa-link" ></i>
-				</span>
-
-				<button class="btn btn-xxs btn-default" style="width: 100%; display: block" ng-click="editIndicator(indicator._id)">
-					<i class="fa fa-pencil"></i>
-					{{'shared.edit'|translate}}
-				</button>
-			</div>
+		<div class="panel-heading">
+			{{indicator.name[language]}}
 		</div>
-	</div>
+		
+		<div class="panel-body" style="padding-bottom: 10px">
+			<strong>{{'project.baseline'|translate}}:</strong> {{editableProject.crossCutting[indicator._id].baseline != null ? editableProject.crossCutting[indicator._id].baseline : '?'}}<br/>
+			<strong>{{'project.target'|translate}}:</strong> {{editableProject.crossCutting[indicator._id].target != null ? editableProject.crossCutting[indicator._id].target : '?'}}<br/>
+
+			<strong>{{'project.computation'|translate}}:</strong>
+			<span class="text-danger" ng-if="!editableProject.crossCutting[indicator._id].computation">
+				{{'project.indicator_is_not_computed'|translate}}
+				<i class="fa fa-unlink" ></i>
+			</span>
+			<span class="text-success" ng-if="editableProject.crossCutting[indicator._id].computation">
+				{{'project.indicator_is_computed'|translate}}
+				<i class="fa fa-link" ></i>
+			</span>
+
+			<button class="btn btn-xxs btn-default" style="width: 100%; display: block" ng-click="editIndicator(indicator._id)">
+				<i class="fa fa-pencil"></i>
+				{{'shared.edit'|translate}}
+			</button>
+		</div>
+	</div></div>
 
 	<br/>
 </div>
