Add migration script. Add support for sat->fri and sun->sat weeks (full rewrite of InputSlots). Add support for proper week numbering and aggregation to month. Add all time slot now tell the user the begin / end dates at all times.
Remove unused dependencies.
Remove dead code (ProjectMenuController / InputModel).
Remove all dependencies on momentjs (besides handsontable, which still use it).

Fix broken layouts when too much data is displayed on a reporting table.
Fix project cloning regression.
Fix broken layouts when users use super long names on indicators and variables.
Fix bug in OptionalDateDirective (preventing to update the model).
Fix bug in PartitionOrderDirective (display broke when partitions were updated).

--- a/client/dev/partials/indicators/reporting.html
+++ b/client/dev/partials/indicators/reporting.html
@@ -51,7 +51,9 @@
 						<span class="input-group-addon"><i class="fa fa-columns"></i></span>
 						<select class="form-control input-sm" id="group-by-input" ng-model="groupBy">
 							<option value="day" translate="shared.day"></option>
-							<option value="week" translate="shared.week"></option>
+							<option value="week_sat" translate="shared.week_sat"></option>
+							<option value="week_sun" translate="shared.week_sun"></option>
+							<option value="week_mon" translate="shared.week_mon"></option>
 							<option value="month" translate="shared.month"></option>
 							<option value="quarter" translate="shared.quarter"></option>
 							<option value="year" translate="shared.year"></option>
@@ -71,7 +73,7 @@
 <div style="clear: both"></div>
 
 <reporting-graph-adapter
-	type="['year', 'quarter', 'month', 'week', 'day'].indexOf(groupBy) !== -1 ? 'line' : 'bar'"
+	type="['year', 'quarter', 'month', 'week_sat', 'week_sun', 'week_mon', 'day'].indexOf(groupBy) !== -1 ? 'line' : 'bar'"
 	rows="rows" cols="cols" plots="plots">
 </reporting-graph-adapter>
 
@@ -86,8 +88,8 @@
 	<thead>
 		<tr>
 			<th style="width: 30px" class="noprint"></th>
-			<th translate="shared.name"></th>
-			<th ng-repeat="col in cols">{{col.name}}</th>
+			<th translate="shared.name" style="min-width: 300px"></th>
+			<th ng-repeat="col in cols" style="min-width: 50px" title="{{col.title}}">{{col.name}}</th>
 		</tr>
 	</thead>
 	
