--- a/client/dev/partials/projects/reporting/reporting.html
+++ b/client/dev/partials/projects/reporting/reporting.html
@@ -39,7 +39,9 @@
 						<span class="input-group-addon"><i class="fa fa-columns"></i></span>
 						<select class="form-control input-sm" id="group-by-input" ng-model="groupBy">
 							<option value="day" translate="shared.day"></option>
-							<option value="week" translate="shared.week"></option>
+							<option value="week_sat" translate="shared.week_sat"></option>
+							<option value="week_sun" translate="shared.week_sun"></option>
+							<option value="week_mon" translate="shared.week_mon"></option>
 							<option value="month" translate="shared.month"></option>
 							<option value="quarter" translate="shared.quarter"></option>
 							<option value="year" translate="shared.year"></option>
@@ -81,7 +83,7 @@
 <div style="clear: both"></div>
 
 <reporting-graph-adapter
-	type="['year', 'quarter', 'month', 'week', 'day'].indexOf(groupBy) !== -1 ? 'line' : 'bar'"
+	type="['year', 'quarter', 'month', 'week_sat', 'week_sun', 'week_mon', 'day'].indexOf(groupBy) !== -1 ? 'line' : 'bar'"
 	rows="rows" cols="cols" plots="plots">
 </reporting-graph-adapter>
 
@@ -96,8 +98,8 @@
 	<thead>
 		<tr>
 			<th style="width: 30px" class="noprint"></th>
-			<th translate="shared.name"></th>
-			<th ng-repeat="col in cols">{{col.name}}</th>
+			<th translate="shared.name" style="min-width: 300px"></th>
+			<th ng-repeat="col in cols" style="min-width: 50px" title="{{col.title}}">{{col.name}}</th>
 		</tr>
 	</thead>
 	<tbody ng-repeat="(blockIndex, block) in blocks">
@@ -135,7 +137,7 @@
 				</div>
 
 				<i class="fa fa-arrow-circle-right" ng-if="row.isGroup"></i>
-				<label for="{{row.id}}">{{row.name}}</label>
+				<label for="{{row.id}}" title="{{row.name}}">{{row.name|maxLength:50}}</label>
 			</td>
 
 			<td ng-repeat="col in row.cols track by $index" reporting-field></td>
