--- a/client/dev/partials/projects/structure/collection-form-edition.html
+++ b/client/dev/partials/projects/structure/collection-form-edition.html
@@ -68,7 +68,9 @@
 		<div class="col-sm-10">
 			<select class="form-control" name="periodicity" id="periodicity-input" ng-model="editableProject.forms[currentFormIndex].periodicity">
 				<option value="day" translate="project.periodicities.day"></option>
-				<option value="week" translate="project.periodicities.week"></option>
+				<option value="week_sat" translate="project.periodicities.week_sat"></option>
+				<option value="week_sun" translate="project.periodicities.week_sun"></option>
+				<option value="week_mon" translate="project.periodicities.week_mon"></option>
 				<option value="month" translate="project.periodicities.month"></option>
 				<option value="quarter" translate="project.periodicities.quarter"></option>
 				<option value="year" translate="project.periodicities.year"></option>
