--- a/client/dev/partials/_forms/optional-date.html
+++ b/client/dev/partials/_forms/optional-date.html
@@ -1,4 +1,3 @@
-
 <div class="input-group">
 	<div class="input-group-addon">
 		<input type="checkbox" ng-model="specifyDate" />
@@ -8,7 +7,7 @@
 		   ng-if="specifyDate"
 		   uib-datepicker-popup="longDate"
 		   name="start"
-		   ng-model="chosenDate"
+		   ng-model="container.chosenDate"
 		   is-open="chosenDateOpen"
 		   ng-click="chosenDateOpen=true"
 		   required
