--- a/client/dev/partials/indicators/list.html
+++ b/client/dev/partials/indicators/list.html
@@ -7,7 +7,7 @@
 <div>
 	<div class="panel panel-default indicator-panel" ng-repeat="indicator in indicators|orderBy:getName">
 		<div class="panel-heading">
-			<div class="panel-title">{{indicator.name[language]}}</div>
+			<div class="panel-title" title="{{indicator.name[language]}}">{{indicator.name[language]|maxLength:90}}</div>
 		</div>
 		<div class="panel-body">
 			<i class="fa fa-circle "
@@ -19,7 +19,7 @@
 				{{theme.name[language]}}
 			</i>
 
-			<div>{{indicator.description[language]}}</div>
+			<div>{{indicator.description[language]|maxLength:200}}</div>
 			
 			<a ui-sref="main.indicator_reporting({indicatorId: indicator._id})" class="btn btn-xxs btn-default">
 				voir les statistiques
