--- a/client/dev/partials/projects/input/collection-input-edition.html
+++ b/client/dev/partials/projects/input/collection-input-edition.html
@@ -21,7 +21,7 @@
 		<label class="col-sm-2 control-label" translate="project.covered_period"></label>
 
 		<div class="col-sm-10">
-			<input class="form-control disabled" disabled ng-value="currentInput.period|formatSlot" />
+			<input class="form-control disabled" disabled ng-value="currentInput.period|formatSlotLong" />
 		</div>
 	</div>
 
