--- a/client/dev/partials/projects/reporting/_olap_grid.html
+++ b/client/dev/partials/projects/reporting/_olap_grid.html
@@ -12,7 +12,8 @@
 			<th colspan="{{grid.body[0].headerCols.length}}"
 				rowspan="{{grid.header.length}}"
 				ng-if="$first"></th>
-			<th ng-repeat="col in row.cols track by $index" colspan="{{row.colspan}}">
+
+			<th ng-repeat="col in row.cols track by $index" colspan="{{row.colspan}}" title="{{col.title}}" style="min-width: 50px">
 				<i class="fa fa-arrow-circle-right" ng-if="col.members"></i>
 				{{col.name}}
 			</th>
@@ -22,7 +23,9 @@
 		<tr ng-repeat="row in grid.body">
 			<th ng-repeat="headerCol in row.headerCols"
 				ng-if="$parent.$index % rowspans[$index] == 0"
-				rowspan="{{rowspans[$index]}}">
+				title="{{headerCol.title}}"
+				rowspan="{{rowspans[$index]}}"
+				style="min-width: 50px">
 				
 				<i class="fa fa-arrow-circle-right" ng-if="headerCol.members"></i>
 				{{headerCol.name}}
