--- a/client/dev/partials/projects/reporting/reporting-detailed.html
+++ b/client/dev/partials/projects/reporting/reporting-detailed.html
@@ -39,7 +39,9 @@
 								<span class="input-group-addon"><i class="fa fa-columns fa-fw"></i></span>
 								<select class="form-control input-sm" id="group-by-input" ng-model="query.groupBy">
 									<option value="day" translate="shared.day"></option>
-									<option value="week" translate="shared.week"></option>
+									<option value="week_sat" translate="shared.week_sat"></option>
+									<option value="week_sun" translate="shared.week_sun"></option>
+									<option value="week_mon" translate="shared.week_mon"></option>
 									<option value="month" translate="shared.month"></option>
 									<option value="quarter" translate="shared.quarter"></option>
 									<option value="year" translate="shared.year"></option>
@@ -114,8 +116,8 @@
 	<thead>
 		<tr>
 			<th style="width: 30px"></th>
-			<th translate="shared.name"></th>
-			<th ng-repeat="col in cols">{{col.name}}</th>
+			<th translate="shared.name" style="min-width: 300px"></th>
+			<th ng-repeat="col in cols" style="min-width: 50px" title="{{col.title}}">{{col.name}}</th>
 		</tr>
 	</thead>
 	<tbody>
