Fix: fixed value is a required field when defining indicator

--- a/client/dev/partials/_forms/indicator-computation.html
+++ b/client/dev/partials/_forms/indicator-computation.html
@@ -15,6 +15,7 @@
 	   style="margin-top: 3px"
 	   ng-model="computation.formula"
 	   ng-pattern="'\\d+'"
+	   required
 	   placeholder="{{'project.indicator_ph_fixed'|translate}}" />
 
 <p class="help-block">
