--- a/client/dev/partials/projects/input/collection-input-edition.html
+++ b/client/dev/partials/projects/input/collection-input-edition.html
@@ -8,6 +8,14 @@
 
 <form class="form-horizontal">
 	<legend translate="project.general_informations"></legend>
+
+	<div class="form-group">
+		<label class="col-sm-2 control-label" translate="shared.name"></label>
+
+		<div class="col-sm-10">
+			<input class="form-control disabled" disabled ng-value="form.name" />
+		</div>
+	</div>
 	
 	<div class="form-group">
 		<label class="col-sm-2 control-label" translate="project.collection_site"></label>
