Fix: do not let users delete cross-cutting indicators (they should think those are entered server-side)

--- a/client/dev/partials/projects/structure/edition-modal.html
+++ b/client/dev/partials/projects/structure/edition-modal.html
@@ -72,7 +72,7 @@
 		<span translate="project.update_logframe"></span>
 	</button>
 
-	<button ng-click="delete()" class="btn btn-danger" ng-if="!isNew">
+	<button ng-click="delete()" class="btn btn-danger" ng-if="!isNew && !indicator">
 		<i class="fa fa-remove"></i>
 		<span translate="shared.delete"></span>
 	</button>
