--- a/client/dev/partials/projects/structure/edition-modal.html
+++ b/client/dev/partials/projects/structure/edition-modal.html
@@ -69,7 +69,7 @@
 <div class="modal-footer">
 	<button ng-click="save()" ng-disabled="planningForm.$invalid" class="btn btn-primary">
 		<i class="fa fa-object-group"></i>
-		<span translate="project.update_logframe"></span>
+		<span translate="shared.apply"></span>
 	</button>
 
 	<button ng-click="delete()" class="btn btn-danger" ng-if="!isNew && !indicator">
