Fix: In olap grid, when only a single field was displayed, it was not formatted Fix: Olap grid now have colors, like the others reporting tables. Fix: Broken template in olap grid by adding a min-width style to leftmost colon

--- a/client/dev/partials/projects/reporting/olap.html
+++ b/client/dev/partials/projects/reporting/olap.html
@@ -110,11 +110,11 @@
 		<table class="table table-bordered" id="reporting">
 			<tbody>
 				<tr>
-					<td>{{display.data}}</td>
+					<td reporting-field="display.data"></td>
 				</tr>
 			</tbody>
 		</table>
 	</div>
 
-	<olap-grid cols="display.cols" rows="display.rows" data="display.data"></olap-grid>
+	<olap-grid colorization="colorization" cols="display.cols" rows="display.rows" data="display.data"></olap-grid>
 </div>
