--- a/client/dev/partials/projects/reporting/_olap_grid.html
+++ b/client/dev/partials/projects/reporting/_olap_grid.html
@@ -13,7 +13,7 @@
 				rowspan="{{grid.header.length}}"
 				ng-if="$first"></th>
 
-			<th ng-repeat="col in row.cols track by $index" colspan="{{row.colspan}}" title="{{col.title}}" style="min-width: 50px">
+			<th ng-repeat="col in row.cols track by $index" colspan="{{row.colspan}}" title="{{col.title}}">
 				<i class="fa fa-arrow-circle-right" ng-if="col.members"></i>
 				{{col.name}}
 			</th>
@@ -25,7 +25,7 @@
 				ng-if="$parent.$index % rowspans[$index] == 0"
 				title="{{headerCol.title}}"
 				rowspan="{{rowspans[$index]}}"
-				style="min-width: 50px">
+				style="min-width: 100px">
 				
 				<i class="fa fa-arrow-circle-right" ng-if="headerCol.members"></i>
 				{{headerCol.name}}
