Add: values now have units in reporting tables Fix: Regression introduced in last commit by breaking a translation string (planning_computation_missing => indicator_computation_missing)

--- a/client/dev/partials/projects/reporting/olap.html
+++ b/client/dev/partials/projects/reporting/olap.html
@@ -116,5 +116,5 @@
 		</table>
 	</div>
 
-	<olap-grid colorization="colorization" cols="display.cols" rows="display.rows" data="display.data"></olap-grid>
+	<olap-grid unit="unit" colorization="colorization" cols="display.cols" rows="display.rows" data="display.data"></olap-grid>
 </div>
