Fix: OlapController stop crashing when user tries to display an indicator w/o setting computation.

--- a/client/dev/partials/projects/reporting/olap.html
+++ b/client/dev/partials/projects/reporting/olap.html
@@ -107,10 +107,13 @@
 <div style="clear: both">
 
 	<div ng-if="display.cols.length == 0 && display.rows.length == 0">
+		
+		
 		<table class="table table-bordered" id="reporting">
 			<tbody>
 				<tr>
-					<td reporting-field="display.data"></td>
+					<td ng-if="display.data == 'formula_missing'" translate="project.indicator_computation_missing"></td>
+					<td ng-if="display.data != 'formula_missing'" reporting-field="display.data"></td>
 				</tr>
 			</tbody>
 		</table>
