--- a/client/dev/partials/projects/structure/extra-indicators.html
+++ b/client/dev/partials/projects/structure/extra-indicators.html
@@ -1,6 +1,6 @@
 <ol class="breadcrumb noprint">
 	<li ng-if="userCtx.type == 'user'"><a ui-sref="main.projects" translate="shared.projects"></a></li>
-	<li><a ui-sref="main.project.structure.basics" ng-bind="masterProject.name|maxLength:50"></a></li>
+	<li class="active" title="{{masterProject.name}}" ng-bind="masterProject.name|maxLength:50"></li>
 	<li class="active" translate="indicator.cross_cutting"></li>
 </ol>
 
