Fix: optional dates were broken

--- a/client/dev/partials/_forms/optional-date.html
+++ b/client/dev/partials/_forms/optional-date.html
@@ -7,7 +7,7 @@
 		   ng-if="specifyDate"
 		   uib-datepicker-popup="longDate"
 		   name="start"
-		   ng-model="container.chosenDate"
+		   ng-model="container.dateLocal"
 		   is-open="chosenDateOpen"
 		   ng-click="chosenDateOpen=true"
 		   required
