Fix: Tool presentation in homepage

--- a/client/dev/partials/home.html
+++ b/client/dev/partials/home.html
@@ -77,7 +77,7 @@
 		<h3>Bienvenue sur Monitool!</h3>
 
 		<p>Monitool est une extension de l’intranet de l’ONG</p>
-		<p>Il a pour objectif de centraliser les données générées par les terrains de la DOI chez Médecins du Monde.</p>
+		<p>Il a pour objectif de centraliser les données générées par les projets de Médecins du Monde.</p>
 
 		<div class="row">
 			<div class="col-xs-4">
@@ -155,7 +155,7 @@
 	<div ng-switch-when="es">
 		<h3>Bienvenidos a Monitool!</h3>
 		<p>Monitool es una extensión de la intranet de la ONG</p>
-		<p>El objetivo del proyecto es centralizar los datos generados por los terrenos de la DOI en Médecins du Monde</p>
+		<p>El objetivo del proyecto es centralizar los datos generados por los proyectos de Médecins du Monde</p>
 
 		<div class="row">
 			<div class="col-xs-4">
