--- a/client/dev/partials/projects/structure/user-modal.html
+++ b/client/dev/partials/projects/structure/user-modal.html
@@ -1,5 +1,5 @@
 <div class="modal-body">
-	<form class="form-horizontal" role="form" name="userForm" novalidate>
+	<form class="form-horizontal" role="form" name="userForm" novalidate autocomplete="off">
 		<legend translate="project.edit_user"></legend>
 
 		<div class="form-group">
